# Mastering-CMake

./: README.md
Step 1/Exercise 1 - Building a Basic Project/: CMakeLists.txt  Sqroot.cpp
Step 1/Exercise 2 - Specifying the C++ Standard/: CMakeLists.txt  Sqroot.cpp
Step 1/Exercise 3 - Adding a Version Number and Configured Header File/: CMakeLists.txt  Sqroot.cpp
Stuff/: Sqroot.cpp
